--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     </a>
                                     <p>
                                         Rajkot
-                                        <span> <a href="tel:+919099142981">+91 90991 42981</a></span>
+                                        <span> <a href="tel:0281 3550415">0281 3550415</a></span>
                                     </p>
                                 </li>
                                 <li>
@@ -415,6 +415,10 @@
                             <li class="phone clearfix">
                                 <span class="hl">Phone:</span>
                                 <span class="text">+91 90991 42981</span>
+                            </li>
+                            <li class="phone clearfix">
+                                <span class="hl">Landline:</span>
+                                <span class="text">0281 3550415</span>
                             </li>
                             <li class="email clearfix">
                                 <span class="hl">E-mail:</span>
