--- a/index.html
+++ b/index.html
@@ -81,21 +81,19 @@
                         <div class="top-info__block text-right">
                             <ul>
                                 <li>
-                                    <a href="https://goo.gl/maps/DYaCHMroUfikHKnF9" target="_blank">
-                                        <i class="fa fa-map-marker"></i>
-                                    </a>
+                                    <i class="fa fa-map-marker"></i>
                                     <p>
                                         Rajkot
-                                        <span> <a href="tel:0281 3550415">0281 3550415</a></span>
                                     </p>
                                 </li>
                                 <li>
-                                    <a href="https://goo.gl/maps/UFW4hX5ETSMqYQsWA" target="_blank">
-                                        <i class="fa fa-map-marker"></i>
-                                    </a>
-                                    <p>
+                                    <i class="fa fa-map-marker"></i><p>
                                         Ahmedabad
-                                        <span><a href="tel:+918866664845">+91 88666 64845</a></span>
+                                    </p>
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i><p>
+                                        Mumbai
                                     </p>
                                 </li>
                             </ul>
@@ -388,37 +386,19 @@
         <div id="footer-widgets" class="container style-1">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="widget widget_text">
+                    <div class="widget widget_text widget_information">
                         <h2 class="widget-title">
-                            <span>ABOUT US</span>
+                            <span>CONTACT INFO</span>
                         </h2>
-                        <div class="textwidget">
-                            <p>
-                                We are capable enough to provide the below mentioned services to our clients with all the experiences and knowledge we have gained.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="widget widget_information">
-                        <h2 class="widget-title"><span>CONTACT INFO</span></h2>
                         <ul>
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-					#509, Fifth Floor,
-					Nakshatra-VIII,
-					Near Sun City, Sadhuvaswani Road,
-					Rajkot - 360005
+                                    #509, Fifth Floor,
+                                    Nakshatra-VIII,
+                                    Near Sun City, Sadhuvaswani Road,
+                                    Rajkot - 360005
                                 </span>
-                            </li>
-                            <li class="phone clearfix">
-                                <span class="hl">Phone:</span>
-                                <span class="text">+91 90991 42981</span>
-                            </li>
-                            <li class="phone clearfix">
-                                <span class="hl">Landline:</span>
-                                <span class="text">0281 3550415</span>
                             </li>
                             <li class="email clearfix">
                                 <span class="hl">E-mail:</span>
@@ -426,7 +406,6 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="widget widget_socials"></div>
                 </div>
                 <div class="col-md-4">
                     <div class="widget widget_information">
@@ -434,14 +413,10 @@
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-                                    Jashvant Co-operative Housing Society<br />
-				    Near Mansi Circle,
-				    Bodakdev, Ahmedabad.
+                                    B-610, Titanium Heights,<br />
+                                    Corporate Road, Opp. Vodafone House,<br />
+                                    Prahladnagar, Ahmedabad -380015.
                                 </span>
-                            </li>
-                            <li class="phone clearfix">
-                                <span class="hl">Phone:</span>
-                                <span class="text">+91 88666 64845</span>
                             </li>
                             <li class="email clearfix">
                                 <span class="hl">E-mail:</span>
@@ -449,8 +424,49 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="widget widget_socials"></div>
                 </div>
+                <div class="col-md-4">
+                    <div class="widget widget_information">
+                        <ul style="margin-top: 70px;">
+                            <li class="address clearfix">
+                                <span class="hl">Address:</span>
+                                <span class="text">
+                                    1st Floor, Milap Apartment,<br />
+                                    Opp. Milap Petrol Pump, S V Road,<br />
+                                    Malad West, Mumbai.
+                                </span>
+                            </li>
+                            <li class="email clearfix">
+                                <span class="hl">E-mail:</span>
+                                <span class="text">rvm.mumbai.mh@gmail.com</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="widget widget_text widget_information">
+                        <ul>
+                            <li class="phone clearfix">
+                                <span class="hl">Landline:</span>
+                                <span class="text">0281 3550415</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="widget widget_text widget_information">
+                        <ul>
+                            <li class="phone clearfix">
+                                <span class="hl">Phone:</span>
+                                <span class="text">+91 90991 42981</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
             </div>
         </div>
     </footer>
