--- a/index.html
+++ b/index.html
@@ -394,10 +394,9 @@
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-                                    #509, Fifth Floor,
-                                    Nakshatra-VIII,
-                                    Near Sun City, Sadhuvaswani Road,
-                                    Rajkot - 360005
+                                    #509, Fifth Floor,<br />
+                                    Nakshatra-VIII, Near Sun City,<br />
+                                    Sadhuvaswani Road, Rajkot - 360005
                                 </span>
                             </li>
                             <li class="email clearfix">
@@ -415,7 +414,7 @@
                                 <span class="text">
                                     B-610, Titanium Heights,<br />
                                     Corporate Road, Opp. Vodafone House,<br />
-                                    Prahladnagar, Ahmedabad -380015.
+                                    Prahladnagar, Ahmedabad - 380015.
                                 </span>
                             </li>
                             <li class="email clearfix">
@@ -433,7 +432,7 @@
                                 <span class="text">
                                     1st Floor, Milap Apartment,<br />
                                     Opp. Milap Petrol Pump, S V Road,<br />
-                                    Malad West, Mumbai.
+                                    Malad West, Mumbai - 400064.
                                 </span>
                             </li>
                             <li class="email clearfix">
